# open-mwos-sdk

./: .gitignore  CMakeLists.txt  LICENSE  README.md  translation_unit.cpp
.github/workflows/: ci.yml
include/Assembler/: Assembler.h  AssemblerPseudoInstHandler.h  AssemblerTarget.h  AssemblerTypes.h  AssemblyState.h  Expression.h  ExpressionLexer.h  ExpressionParser.h  InputFileParser.h  MipsAssemblerTarget.h  Operation.h
include/Expression/: Expression.h
include/Module/: CrcGenerator.hpp  Module.hpp  ModuleHeader.hpp  ModuleInfoPrinter.hpp  ModuleUtils.hpp
include/Object/: ObjectFile.h
include/ROF/: ExpressionTreeBuilder.h  ROFHeader.h  ROFObjectFile.h  ROFObjectWriter.h  ROFUtils.h  ROFWriter.h  Rof15Header.h  Rof15ObjectFile.h  Rof15ObjectWriter.h
include/Support/: BinarySection.hpp  BinarySectionReader.hpp  BinarySectionWriter.h  Bitwise.h  Endian.h  Numeric.h  SerializableStruct.h  Serialization.h  StringUtil.h  TupleSerialization.h  Visitor.h
lib/: CMakeLists.txt
lib/Assembler/: Assembler.cpp  AssemblerDirective.cpp  AssemblerDirectiveHandler.cpp  AssemblerDirectiveHandler.h  AssemblerOperationHandler.h  AssemblerPseudoInst.cpp  AssemblerPseudoInstHandler.cpp  AssemblyState.h  CMakeLists.txt  ExpressionLexer.cpp  ExpressionParser.cpp  ExpressionResolver.cpp  ExpressionResolver.h  InputFileParser.cpp  MipsAssemblerTarget.cpp  Operation.h
lib/Module/: CMakeLists.txt  CrcGenerator.cpp  Module.cpp  ModuleInfoPrinter.cpp  ModuleUtils.cpp
lib/ROF/: CMakeLists.txt  ExpressionTreeBuilder.cpp  ROFObjectFile.cpp  ROFObjectWriter.cpp  ROFUtils.cpp  ROFWriter.cpp  Rof15ObjectWriter.cpp
test/: CMakeLists.txt
test/Assembler/: ComparisonHelpers.cpp  ComparisonHelpers.h  PrinterHelpers.cpp  PrinterHelpers.h  TestAssemblerPseudoInstHandler.cpp  TestExpressionLexer.cpp  TestExpressionParser.cpp  TestInputFileParser.cpp  TestMipsAssemblerTarget.cpp
test/ROF/: TestRof15ObjectWriter.cpp
tools/: CMakeLists.txt
tools/amips/: CMakeLists.txt  Parser.cpp  Parser.h  amips.cpp  amips.h
tools/amips/test/: CMakeLists.txt  amips-test.cpp
tools/ident/: CMakeLists.txt  ident.cpp
